feat(selenium): Add coursera crawler